footer overflow corrected

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -29,24 +29,24 @@ img
   height: 100%
   display: block
   
-.content
+main
   padding: 1rem
 
 footer
   padding: 1rem
   display: flex
-  gap: 1rem
+  flex-direction: column
+  gap: 0.4rem
 
-@media (max-width: 350px)
-  footer
-    overflow-x: scroll
+.final-links
+  display: flex
+  flex-wrap: wrap 
+  grap: 1rem
 
 @media (min-width: 700px)
-  .content, footer
+  main, footer
     width: 50vw
     margin: 0 auto
 
-  footer
-    justify-content: center    
-
-
+  .final-links
+    justify-content: center
